@@ -1,47 +1,59 @@
 package com.crm.service.impl;
 
 import com.baomidou.mybatisplus.core.conditions.query.LambdaQueryWrapper;
+import com.baomidou.mybatisplus.extension.plugins.pagination.Page;
 import com.crm.common.exception.ServerException;
 import com.crm.common.result.PageResult;
 import com.crm.convert.ContractConvert;
-import com.crm.entity.*;
+import com.crm.entity.Contract;
+import com.crm.entity.ContractProduct;
+import com.crm.entity.Customer;
+import com.crm.entity.Product;
 import com.crm.mapper.ContractMapper;
 import com.crm.mapper.ContractProductMapper;
 import com.crm.mapper.ProductMapper;
 import com.crm.query.ContractQuery;
-import com.baomidou.mybatisplus.extension.plugins.pagination.Page;
+import com.crm.query.ContractTrendQuery;
 import com.crm.security.user.SecurityUser;
 import com.crm.service.ContractService;
 import com.baomidou.mybatisplus.extension.service.impl.ServiceImpl;
+import com.crm.utils.DateUtils;
+import com.crm.vo.ContractTrendVO;
 import com.crm.vo.ContractVO;
-import com.crm.vo.CustomerVO;
 import com.crm.vo.ProductVO;
-import com.github.yulichang.query.MPJLambdaQueryWrapper;
 import com.github.yulichang.wrapper.MPJLambdaWrapper;
-import io.micrometer.common.util.StringUtils;
 import lombok.AllArgsConstructor;
+import org.apache.commons.lang3.StringUtils;
+import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 
 import java.math.BigDecimal;
-import java.sql.Wrapper;
-import java.util.List;
-import java.util.stream.Collectors;
-
+import java.time.LocalDate;
+import java.time.LocalDateTime;
+import java.time.format.DateTimeFormatter;
+import java.time.temporal.ChronoUnit;
+import java.util.*;
 import static com.crm.utils.NumberUtils.generateContractNumber;
+
 
 
 @Service
 @AllArgsConstructor
 public class ContractServiceImpl extends ServiceImpl<ContractMapper, Contract> implements ContractService {
-    private final ContractProductMapper contractProductMapper;
     private final ProductMapper productMapper;
+    private final ContractProductMapper contractProductMapper;
+
     @Override
     public PageResult<ContractVO> getPage(ContractQuery query) {
-        Page<ContractVO> page = new Page<>();
+        Page<ContractVO> page = new Page<>(query.getPage(), query.getLimit());
+//        条件查询
         MPJLambdaWrapper<Contract> wrapper = new MPJLambdaWrapper<>();
         if (StringUtils.isNotBlank(query.getName())) {
             wrapper.like(Contract::getName, query.getName());
+        }
+        if (query.getStatus() != null) {
+            wrapper.eq(Contract::getStatus, query.getStatus());
         }
         if (query.getCustomerId() != null) {
             wrapper.eq(Contract::getCustomerId, query.getCustomerId());
@@ -49,87 +61,151 @@ public class ContractServiceImpl extends ServiceImpl<ContractMapper, Contract> i
         if (StringUtils.isNotBlank(query.getNumber())) {
             wrapper.like(Contract::getNumber, query.getNumber());
         }
-        if (query.getStatus() != null) {
-            wrapper.eq(Contract::getStatus, query.getStatus());
-        }
-        wrapper.orderByDesc(Contract::getCreateTime);
-// 只查询目前登录的员工签署的合同列表
+        // 只查询目前登录的员工签署的合同信息
         Integer managerId = SecurityUser.getManagerId();
         wrapper.selectAll(Contract.class)
                 .selectAs(Customer::getName, ContractVO::getCustomerName)
                 .leftJoin(Customer.class, Customer::getId, Contract::getCustomerId)
-                .eq(Contract::getOwnerId, managerId);
+                .eq(Contract::getOwnerId, managerId).orderByDesc(Contract::getCreateTime);
         Page<ContractVO> result = baseMapper.selectJoinPage(page, ContractVO.class, wrapper);
-// 查询合同签署的商品信息
+//        查询合同签署的商品信息
         if (!result.getRecords().isEmpty()) {
             result.getRecords().forEach(contractVO -> {
                 List<ContractProduct> contractProducts = contractProductMapper.selectList(new LambdaQueryWrapper<ContractProduct>().eq(ContractProduct::getCId, contractVO.getId()));
-                contractVO.setProducts(ContractConvert.INSTANCE.convertToProductVOList(contractProducts));
+                contractVO.setProducts(ContractConvert.INSTANCE.toProductVOList(contractProducts));
             });
         }
-
-        return new PageResult<>(result.getRecords(), result.getTotal());
+        return new PageResult<>(result.getRecords(), page.getTotal());
     }
+
 
     @Override
     @Transactional(rollbackFor = Exception.class)
     public void saveOrUpdate(ContractVO contractVO) {
+
         boolean isNew = contractVO.getId() == null;
         // 校验合同名称重复
-        if(isNew&& baseMapper.exists(new LambdaQueryWrapper<Contract>().eq(Contract::getName,contractVO.getName()))){
+        if (isNew && baseMapper.exists(new LambdaQueryWrapper<Contract>().eq(Contract::getName, contractVO.getName()))) {
             throw new ServerException("合同名称已存在，请勿重复添加");
         }
         // 转换并保存合同
-        Contract contract = ContractConvert.INSTANCE.convert(contractVO);
+        Contract contract = ContractConvert.INSTANCE.toContract(contractVO);
         contract.setCreaterId(SecurityUser.getManagerId());
         contract.setOwnerId(SecurityUser.getManagerId());
-        if(isNew){
+        if (isNew) {
             contract.setNumber(generateContractNumber());
             baseMapper.insert(contract);
-        }else {
-            Contract oldContract = baseMapper.selectById(contract.getId());
-            if (oldContract == null) {
-                throw new ServerException("合同不存在");
-            }
-            if (oldContract.getStatus() == 1) {
-                throw new ServerException("合同正在审核中，请勿执行修改操作");
-            }
+        } else {
+            Contract dbContract = baseMapper.selectById(contract.getId());
+            if (dbContract == null) throw new ServerException("合同不存在");
+            if (dbContract.getStatus() == 1) throw new ServerException("该合同已审核通过，请勿修改");
             baseMapper.updateById(contract);
+        }
+        if (contract.getReceivedAmount() == null) {
+            contract.setReceivedAmount(BigDecimal.ZERO);
         }
         // 处理合同商品明细
         handleContractProducts(contract.getId(), contractVO.getProducts());
-    }
-    private ContractProduct buildContractProduct(Integer contractId, Product product, int count) {
-        ContractProduct contractProduct = new ContractProduct();
-        contractProduct.setCId(contractId);
-        contractProduct.setPId(product.getId());
-        contractProduct.setPName(product.getName());
-        contractProduct.setPrice(product.getPrice());
-        contractProduct.setCount(count);
-        contractProduct.setTotalPrice(product.getPrice().multiply(new BigDecimal(count)));
-        return contractProduct;
-    }
-    private Product checkProductStock(Integer productId, int count){
-    Product product = productMapper.selectById(productId);
-    if (product == null) {
-        throw new ServerException("商品不存在");
-    }
-    if (product.getStock() < count) {
-        throw new ServerException("商品库存不足");
-    }
-    return product;
-}
-    private void increaseStock(Product product, int count) {
-        product.setStock(product.getStock() + count);
-        product.setSales(product.getSales() - count);
-        productMapper.updateById(product);
+
     }
 
-    private void decreaseStock(Product product, int count) {
-        product.setStock(product.getStock() - count);
-        product.setSales(product.getSales() + count);
-        productMapper.updateById(product);
+    @Autowired
+    private ContractMapper contractMapper;
+
+    @Override
+    public Map<String, List> getContractTrendData(ContractTrendQuery query) {
+        List<String> timeList = new ArrayList<>();
+        List<Integer> countList = new ArrayList<>();
+        List<ContractTrendVO> tradeStatistics = new ArrayList<>();
+
+        // 维度判断逻辑不变，确保调用正确的 Mapper 方法
+        if ("day".equals(query.getTransactionType())) {
+            LocalDateTime now = LocalDateTime.now();
+            LocalDateTime endTime = now.truncatedTo(ChronoUnit.SECONDS);
+            LocalDateTime startTime = now.withHour(0).withMinute(0).withSecond(0).truncatedTo(ChronoUnit.SECONDS);
+            DateTimeFormatter formatter = DateTimeFormatter.ofPattern("yyyy-MM-dd HH:mm:ss");
+            List<String> timeRange = new ArrayList<>();
+            timeRange.add(formatter.format(startTime));
+            timeRange.add(formatter.format(endTime));
+            query.setTimeRange(timeRange);
+
+            query.setTimeFormat("%H");
+            tradeStatistics = baseMapper.getTradeStatisticsByDay(query); // 调用日维度 SQL
+
+            // 生成与 SQL 返回格式一致的 timeList（00-23，字符串类型）
+            timeList = DateUtils.getHourData(timeRange);
+            if (timeList.isEmpty() || !timeList.get(0).matches("\\d{2}")) {
+                timeList = new ArrayList<>();
+                for (int i = 0; i < 24; i++) {
+                    timeList.add(String.format("%02d", i));
+                }
+            }
+
+        } else if ("monthrange".equals(query.getTransactionType())) {
+            query.setTimeFormat("%Y-%m");
+            timeList = DateUtils.getMonthInRange(query.getTimeRange().get(0), query.getTimeRange().get(1));
+            tradeStatistics = baseMapper.getTradeStatistics(query); // 调用通用 SQL
+
+        } else if ("week".equals(query.getTransactionType())) {
+            // 生成与 SQL 返回格式一致的 timeList（周数，如 "45"，字符串类型）
+            timeList = DateUtils.getWeekInRange(query.getTimeRange().get(0), query.getTimeRange().get(1));
+            tradeStatistics = baseMapper.getTradeStatisticsByWeek(query); // 调用周维度 SQL
+
+        } else {
+            query.setTimeFormat("%Y-%m-%d");
+            timeList = DateUtils.getDatesInRange(query.getTimeRange().get(0), query.getTimeRange().get(1));
+            tradeStatistics = baseMapper.getTradeStatistics(query); // 调用通用 SQL
+        }
+
+        // 核心：遍历 tradeStatistics 时，使用 ContractTrendVO 的 getTradeTime() 和 getTradeCount()
+        Map<String, Integer> dataMap = new HashMap<>();
+        // 先判断集合不为 null，避免 NPE
+        if (tradeStatistics != null) {
+            for (ContractTrendVO vo : tradeStatistics) {
+                // 过滤 null 对象，且确保 tradeTime 和 tradeCount 不为 null
+                if (vo != null && vo.getTradeTime() != null && vo.getTradeCount() != null) {
+                    dataMap.put(vo.getTradeTime(), vo.getTradeCount());
+                }
+            }
+        }
+
+        // 填充 countList（无数据补 0）
+        countList.clear();
+        for (String time : timeList) {
+            countList.add(dataMap.getOrDefault(time, 0));
+        }
+
+        Map<String, List> result = new HashMap<>();
+        result.put("timeList", timeList);
+        result.put("countList", countList);
+        return result;
     }
+    // 复用已有的周范围生成方法（与客户模块保持一致）
+    private List<String> getWeekInRange(String start, String end) {
+        return DateUtils.getDatesInRange(start, end);
+    }
+
+
+    // 生成周时间标签（yyyy-MM-dd）
+    private List<String> getWeekLabels(String startDate, String endDate) {
+        // 实现参考DateUtils.getDatesInRange，返回日期列表
+        return DateUtils.getDatesInRange(startDate, endDate);
+    }
+
+    // 生成月时间标签（yyyy-MM）
+    private List<String> getMonthLabels(String startDate, String endDate) {
+        List<String> labels = new ArrayList<>();
+        LocalDate start = LocalDate.parse(startDate, DateTimeFormatter.ofPattern("yyyy-MM-dd"));
+        LocalDate end = LocalDate.parse(endDate, DateTimeFormatter.ofPattern("yyyy-MM-dd"));
+
+        LocalDate current = start;
+        while (!current.isAfter(end)) {
+            labels.add(current.format(DateTimeFormatter.ofPattern("yyyy-MM")));
+            current = current.plusMonths(1);
+        }
+        return labels;
+    }
+
     private void handleContractProducts(Integer contractId, List<ProductVO> newProductList) {
         if (newProductList == null) return;
 
@@ -140,9 +216,9 @@ public class ContractServiceImpl extends ServiceImpl<ContractMapper, Contract> i
         // === 1. 新增商品 ===
         List<ProductVO> newAdded = newProductList.stream()
                 .filter(np -> oldProducts.stream().noneMatch(op -> op.getPId().equals(np.getPId())))
-                .collect(Collectors.toList());
+                .toList();
         for (ProductVO p : newAdded) {
-            Product product = checkProductStock(p.getPId(),  0);
+            Product product = checkAndGetProduct(p.getPId(), p.getCount());
             decreaseStock(product, p.getCount());
             ContractProduct cp = buildContractProduct(contractId, product, p.getCount());
             contractProductMapper.insert(cp);
@@ -152,17 +228,19 @@ public class ContractServiceImpl extends ServiceImpl<ContractMapper, Contract> i
         List<ProductVO> changed = newProductList.stream()
                 .filter(np -> oldProducts.stream()
                         .anyMatch(op -> op.getPId().equals(np.getPId()) && !op.getCount().equals(np.getCount())))
-                .collect(Collectors.toList());
+                .toList();
         for (ProductVO p : changed) {
             ContractProduct old = oldProducts.stream()
                     .filter(op -> op.getPId().equals(p.getPId()))
                     .findFirst().orElseThrow();
-            Product product = checkProductStock(p.getPId(), 0);
 
+            Product product = checkAndGetProduct(p.getPId(), 0);
             int diff = p.getCount() - old.getCount();
+
             // 库存调整
             if (diff > 0) decreaseStock(product, diff);
             else if (diff < 0) increaseStock(product, -diff);
+
             // 更新合同商品
             old.setCount(p.getCount());
             old.setPrice(product.getPrice());
@@ -173,7 +251,7 @@ public class ContractServiceImpl extends ServiceImpl<ContractMapper, Contract> i
         // === 3. 删除商品 ===
         List<ContractProduct> removed = oldProducts.stream()
                 .filter(op -> newProductList.stream().noneMatch(np -> np.getPId().equals(op.getPId())))
-                .collect(Collectors.toList());
+                .toList();
         for (ContractProduct rm : removed) {
             Product product = productMapper.selectById(rm.getPId());
             if (product != null) increaseStock(product, rm.getCount());
@@ -181,7 +259,7 @@ public class ContractServiceImpl extends ServiceImpl<ContractMapper, Contract> i
         }
     }
 
-//新增
+
     private Product checkAndGetProduct(Integer productId, int needCount) {
         Product product = productMapper.selectById(productId);
         if (product == null) throw new ServerException("商品不存在");
@@ -190,4 +268,29 @@ public class ContractServiceImpl extends ServiceImpl<ContractMapper, Contract> i
         }
         return product;
     }
+
+    private void decreaseStock(Product product, int count) {
+        product.setStock(product.getStock() - count);
+        product.setSales(product.getSales() + count);
+        productMapper.updateById(product);
+    }
+
+    private void increaseStock(Product product, int count) {
+        product.setStock(product.getStock() + count);
+        product.setSales(product.getSales() - count);
+        productMapper.updateById(product);
+    }
+
+    private ContractProduct buildContractProduct(Integer contractId, Product product, int count) {
+        ContractProduct cp = new ContractProduct();
+        cp.setCId(contractId);
+        cp.setPId(product.getId());
+        cp.setPName(product.getName());
+        cp.setCount(count);
+        cp.setPrice(product.getPrice());
+        cp.setTotalPrice(product.getPrice().multiply(BigDecimal.valueOf(count)));
+        return cp;
+    }
+
+
 }
